--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,9 +1,11 @@
 .generic-content-container {
 
     p {
+        font-weight:300;
         line-height: 1.4;
         font-size: 1.125rem;
-        margin: 1.4rem ;
+        margin: 0 0 1.4rem 0 ;
+        
     }
     p a {
         font-weight: 700;
