--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -20,6 +20,10 @@
         
         
     }
+    &--t-padding {
+        padding-top: 80px;
+
+    }
 &--gutters {
     margin-right: -65px;
 }
@@ -27,6 +31,11 @@
         margin-right: -100px;
     }
     
+    &--gutters-large{
+        margin-right: -45px;
+    }
+    
+
     &--gutters > div {
         
         padding-right: 65px;
@@ -36,10 +45,13 @@
      
     }
 
-    /* &--gutters-large > div {
-      padding-right: 100px;
-    } */
+    &--gutters-small > div {
+        
+        padding-right: 45px;
+     
+    }
 
+  
 
     &__b-margin-until-medium {
         margin-bottom: 1rem;   }
@@ -47,5 +59,24 @@
             float: left;
             width: 50%;
         }
+
+        &__medium-4{
+            float: left;
+            width: 33.33%;
+        }
+
+        &__medium-8{
+            float: left;
+            width: 66.66%;
+        }
+  
+/* Begin Equal Height Rules */
+
+ &--equal-height-at-medium {
+    display: flex;
+    float: none;
+ 
+   
+}
 
 }
