--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -23,5 +23,9 @@
 @import url("modules/_generic-content-container");
 @import url("modules/_section-title");
 @import url("modules/_feature-item");
+@import url("modules/_testimonial");
+@import url("modules/_site-footer");
+@import url("modules/_site-header");
+@import url("modules/_primary-nav");
 
 
