--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -4,16 +4,22 @@
    
 
     &__icon {
-        position: absolute;
-        left: 19%;
-     
+        /* position: aut;
+        left: 0;
+         */
+        margin-right : .5rem;
+        display: inline-block; 
+        margin-left: auto;
+        margin-right: auto;
     }
-
-    &__icon-2 {
+    /* &__icon-2 {
         position: absolute;
         left: 54%;
-    }
+        right: 46%;
+        transform: translate(-50%, -50%); 
+    } */
 
+   
     &__title {
         font-size: 1.875rem;
         margin-bottom: .8rem;
