--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -5,4 +5,10 @@
         background-color: #2f5572;
         
     
-} }
+} 
+
+&--testimonials {
+    background:  url('/app/assets/images/testimonials-bg.jpg') top center ;
+    background-size: cover;
+}
+}
