--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -11,9 +11,15 @@ strong {
 }
 &__icon {
     margin-right : .5rem;
-    display: block;
+    display: inline-block; 
     margin-left: auto;
     margin-right: auto;
     
+    
+}
+
+&__blue {
+color:#2f5572;
+
 }
 }
